# just-test-cmake-sdl-linux

./: CMakeLists.txt  FindSDL2_image.cmake  PreLoad.cmake  clean.sh
